--- a/Components/MainPage/Opinions/Opinions.module.css
+++ b/Components/MainPage/Opinions/Opinions.module.css
@@ -1,7 +1,5 @@
 .slider {
     width: 100vw;
-    padding: 7rem auto;
-    background-color: #fff;
   }
   .opinions__slider__content {
     margin: 0 auto;
