--- a/Components/MainPage/Questions/Questions.module.css
+++ b/Components/MainPage/Questions/Questions.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     background-color: #fff;
     color: #000;
+    margin: 60px 0 40px 0 ;
 }
 .questions__width{
     display: flex;
