--- a/Components/OffertPage/OffertPackage.module.css
+++ b/Components/OffertPage/OffertPackage.module.css
@@ -7,11 +7,13 @@
     margin: 50px 0;
     font-size: 30px;
     text-align: left;
+    color: #000;
 }
 
 .package__price{
     font-weight: bold;
-    margin: 40px 0 30px 0  
+    margin: 40px 0 30px 0  ;
+    color: #000;
 }
 .package__image{
     position: relative;
@@ -33,11 +35,13 @@
     line-height: 1.5;
     margin: 25px 0;
     letter-spacing: 0.8px;
+    color: #000;
 }
 .package__line{
     line-height: 1.5;
     margin: 25px 0;
     font-weight: bold;
+    color: #000;
 }
 .package__content{
     margin: 30px 40px 30px 0 
