--- a/pages/portfolio/portfolio.module.css
+++ b/pages/portfolio/portfolio.module.css
@@ -1,5 +1,6 @@
 .portfolio{
     background-color: #fff;
+    margin-bottom: 60px;
 }
 .portfolio__header{
     padding-top: 120px;
